[Role & Permission] #BE Enhance role management: add debug endpoints for role retrieval and admin access, and update JWT authentication to include roles